--- a/Penguins_graphs.Rmd
+++ b/Penguins_graphs.Rmd
@@ -31,5 +31,7 @@ ggplot(data = penguins,
 
 gg plot is good at recognizing groups within variables and making aesthetic distinctions
 #change color of points
+stage then push then commit
+
 
 
